--- a/request-limit.yaml
+++ b/request-limit.yaml
@@ -9,7 +9,8 @@ spec:
       command: ['sh','-c','echo app is running && sleep 3600']
       resources:
         requests:
-          memory: "128Mi" #we give memory value as bytes only
+          memory: "128Mi" 
+          
           cpu: "125m" 
         limits:
           memory: "256Mi" #best to give double of request incase your app recieves more logs
