--- a/deploy-k8s.yaml
+++ b/deploy-k8s.yaml
@@ -17,3 +17,17 @@ spec:
           image: {{.Values.image}}
           ports:
             - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: app-svc
+spec:
+  selector:
+    app: app
+  type: NodePort
+  ports:
+  - targetPort: 80
+    port: 80
+    protocol: "TCP"
+  
