--- a/spring-deployment.yaml
+++ b/spring-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         - name: gar-secret
       containers:
         - name: spring
-          image: us-central1-docker.pkg.dev/intrepid-axe-482904-f4/harness-repo/app:blue
+          image: us-central1-docker.pkg.dev/intrepid-axe-482904-f4/harness-repo/spring-petclinic:v1
           ports:
             - containerPort: 80
 ---
